--- a/messenger/src/app/modules/chat/chat.component.html
+++ b/messenger/src/app/modules/chat/chat.component.html
@@ -1,1 +1,15 @@
-<p>chat works!</p>
+<div class="chat-box" *ngIf="messages">
+  <ul class="messages-box" #scrollframe>
+    <app-chat-message
+      *ngFor="let message of messages"
+      [message]="message"
+      [isUser]="user.uid === message.authorId"
+      #chatItem
+    ></app-chat-message>
+  </ul>
+  <div>
+    <input type="text" [(ngModel)]="messageText">
+    <button (click)="sendMessage()">Send</button>
+  </div>
+</div>
+
