--- a/messenger/src/app/modules/chat/components/chat-message/chat-message.component.html
+++ b/messenger/src/app/modules/chat/components/chat-message/chat-message.component.html
@@ -1,10 +1,10 @@
 <li class="chat-message" [ngClass]="{ 'chat-right': isUser, 'chat-left': !isUser }">
   <div class="chat-avatar">
     <img class="avatar-img" [src]="message.authorPhoto" (error)="errorHandler($event)">
-    <div class="chat-name">{{ message?.author }}</div>
-    <div class="chat-hour">{{ message?.timestamp | date:'short' }}</div>
+    <div class="chat-name">{{ message.author }}</div>
+    <div class="chat-hour">{{ message.timestamp | date:'short' }}</div>
   </div>
   <div class="chat-text">
-    {{ message?.message }}
+    {{ message.message }}
   </div>
 </li>
