--- a/messenger/src/app/modules/layout/header/header.component.html
+++ b/messenger/src/app/modules/layout/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header-content">
-  <div class="logo"><img class="logo-image" src="/assets/images/logo.png" alt="logo"></div>
+  <div class="logo">Chatty</div>
   <div>
     <div>{{user?.displayName}}</div>
     <button *ngIf="user?.displayName" (click)="logOut()">Log out</button>
