--- a/messenger/src/app/modules/chat/chat.component.scss
+++ b/messenger/src/app/modules/chat/chat.component.scss
@@ -1,6 +1,67 @@
+@import 'src/styles/variables';
+
 :host {
-  display: block;
-  height: calc(100% - 120px);
-  width: 90%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: calc(100% - 60px);
+  width: 100%;
+  padding: 15px 100px;
   margin: 0 auto;
+  background-image: url("~src/assets/images/chat-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  @media (max-width: $lg) {
+    padding: 15px 40px;
+  }
+}
+
+.chats-wrapper {
+  width: 100%;
+  height: 60%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.chats {
+  width: 48%;
+  height: 100%;
+}
+
+.users {
+  width: 100%;
+  height: 35%;
+  margin-top: 20px;
+}
+
+.chat-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $header-bg;
+  height: 50px;
+  color: $white;
+  font-size: 30px;
+  border-radius: 5px;
+  text-align: center;
+  @media(max-width: $md) {
+    font-size: 25px;
+  }
+  @media(max-width: $sm) {
+    font-size: 20px;
+  }
+}
+
+.add-new-chat-button {
+  position: absolute;
+  bottom: 10px;
+  right: 100px;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  color: $white;
+  font-size: 34px;
+  @media (max-width: 992px) {
+    right: 40px;
+  }
 }
