--- a/messenger/src/app/modules/chat/components/chat-message/chat-message.component.scss
+++ b/messenger/src/app/modules/chat/components/chat-message/chat-message.component.scss
@@ -1,13 +1,16 @@
+@import 'src/styles/variables';
+
 .chat-message {
   max-width: 430px;
   width: 93%;
+  margin: 0 auto;
   &.chat-left, &.chat-right {
     display: flex;
     flex: 1;
     flex-direction: row;
-    margin-bottom: 40px;
     max-width: 430px;
     width: 93%;
+    margin: 0 auto 40px;
   }
 
   .avatar-img {
@@ -35,7 +38,7 @@
 
       &:before {
         right: -20px;
-        border-color: transparent transparent transparent #ffffff;
+        border-color: transparent transparent transparent $white;
         left: inherit;
       }
     }
@@ -47,7 +50,7 @@
 
   .chat-name {
     font-size: .75rem;
-    color: #999999;
+    color: $chat-user-name;
     text-align: center;
   }
 
@@ -56,7 +59,7 @@
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    background: #ffffff;
+    background: $white;
     font-weight: 300;
     line-height: 150%;
     position: relative;
@@ -82,6 +85,7 @@
     align-items: center;
     justify-content: center;
     margin: 0 0 0 15px;
+    color: $chat-user-name;
 
     & > span {
       font-size: 16px;
@@ -90,7 +94,7 @@
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: $md) {
   .chat-message.chat-left, .chat-message.chat-right {
     flex-direction: column;
     margin-bottom: 30px;
