--- a/messenger/src/app/modules/chat/pages/chat-room/chat-room.component.scss
+++ b/messenger/src/app/modules/chat/pages/chat-room/chat-room.component.scss
@@ -1,6 +1,44 @@
+@import 'src/styles/variables';
+
 :host {
   display: block;
-  height: calc(100% - 120px);
+  height: calc(100% - 60px);
+  background-image: url("../../../../../assets/images/chat-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.chat-info {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px;
+  border: 1px solid $border-color;
+  border-radius: 5px;
+ }
+
+.go-back-icon {
+  color: $main-text-color;
+  border: 1px solid $border-color;
+  padding: 10px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.chat-title {
+  margin-left: 10px;
+}
+
+.welcome-title {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.welcome-img {
+  width: 100%;
 }
 
 .emoji-mart-block {
@@ -14,7 +52,7 @@
 }
 
 .chat-box {
-  max-width: 450px;
+  max-width: 430px;
   width: 90%;
   height: 100%;
   display: flex;
@@ -22,13 +60,17 @@
   justify-content: space-between;
   margin: 0 auto;
   padding: 10px;
-  background: #cbd0e8;
+  background: #e8f5e9;
   border-radius: 5px;
+  -webkit-box-shadow: 0px 2px 10px 2px rgba(0, 105, 92, 0.56);
+  -moz-box-shadow: 0px 2px 10px 2px rgba(0, 105, 92, 0.56);
+  box-shadow: 0px 2px 10px 2px rgba(0, 105, 92, 0.56);
 }
 
 .messages-box {
   height: 92%;
   overflow-y: auto;
+  padding: 10px 0;
 }
 
 .input {
@@ -37,9 +79,17 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ffffff;
-  border-top: 1px solid white;
+  background-color: $white;
+  border-top: 1px solid $white;
   outline: none;
+}
+
+.welcome-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 100%;
 }
 
 .send-button {
