--- a/messenger/src/app/modules/login/login.component.scss
+++ b/messenger/src/app/modules/login/login.component.scss
@@ -1,23 +1,39 @@
+@import 'src/styles/variables';
+
 :host {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
-  height: 96%;
+  height: calc(100% - 60px);
+  padding: 15px 180px;
+  background-color: $white;
+  background-image: url("~src/assets/images/chat-main.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  @media (max-width: $lg) {
+    justify-content: flex-start;
+    align-items: center;
+    padding: 15px 40px;
+  }
 }
 
 .wrapper {
-  max-width: 300px;
-  width: 85%;
+  max-width: 400px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   padding: 15px;
-  border: 1px solid #94a2aa;
+  background-color: $white;
   border-radius: 5px;
+  -webkit-box-shadow: 0px 2px 10px 2px rgba(0, 105, 92, 0.56);
+  -moz-box-shadow: 0px 2px 10px 2px rgba(0, 105, 92, 0.56);
+  box-shadow: 0px 2px 10px 2px rgba(0, 105, 92, 0.56);
 }
 
 .title {
-  color: #d40000;
+  color: $main-text-color;
   font-size: 30px;
   text-align: center;
   margin-bottom: 50px;
@@ -40,7 +56,6 @@
   width: 100%;
   align-items: center;
   padding: 2px;
-  background: #d40000;
   color: white;
   font-size: 18px;
   margin: 0 auto;
