fixed name error

--- a/messenger/src/app/modules/chat/pages/chat-room/chat-room.component.html
+++ b/messenger/src/app/modules/chat/pages/chat-room/chat-room.component.html
@@ -3,7 +3,7 @@
     <a [routerLink]="['/chats']" matTooltip="Go back">
       <mat-icon class="go-back-icon">arrow_back</mat-icon>
     </a>
-    <h2 class="chat-title">{{selectedChat.name}}</h2>
+    <h2 class="chat-title">{{selectedChat?.name}}</h2>
   </div>
   <ul class="messages-box" #scrollframe>
     <ng-container *ngIf="messages; else spinner">
@@ -17,7 +17,7 @@
       </ng-container>
       <ng-template #helloBlock>
         <div class="welcome-wrapper">
-          <h2 class="welcome-title">Welcome to chat: {{selectedChat.name}}</h2>
+          <h2 class="welcome-title">Welcome to chat: {{selectedChat?.name}}</h2>
           <div class="welcome-img">
             <img class="welcome-img" src="/assets/images/welcom.png" alt="Welcome to chat">
           </div>
