created single page for chat and chats

--- a/messenger/src/app/modules/chat/components/chat-list-item/chat-list-item.component.html
+++ b/messenger/src/app/modules/chat/components/chat-list-item/chat-list-item.component.html
@@ -7,5 +7,5 @@
       delete_outline
     </mat-icon>
   </button>
-  <a class="chats-link" [routerLink]="[link, chat.id]">{{chat.name}}</a>
+  <a class="chats-link" [routerLink]="['/chats', chat.id]">{{chat.name}}</a>
 </li>
