--- a/messenger/src/styles/variables.scss
+++ b/messenger/src/styles/variables.scss
@@ -1,14 +1,17 @@
 $body-bg:  #f4f5fb;
-$header-bg: #004d40;
-$main-text-color: #00695c;
-$button-bg: #00897b;
-$button-hover: #009688;
-$text-color: #00796b;
-$border-color: #b2dfdb;
+$header-bg: #051367;
+$main-content-bg: #5D8BF4;
+$main-text-color: #051367;
+$text-color: #333C83;
+$button-bg: #333C83;
+$button-hover: #F24A72;
+$border-color: #5D8BF4;
 $white: #ffffff;
-$chat-item-border: #4db6ac;
+$chat-item-border: #051367;
+$chat-bg: #DFF6FF;
 $red: #d32f2f;
 $chat-user-name: #999999;
+$box-shadow: rgba(5, 19,103, 0.56);
 
 $lg: 992px;
 $sm: 415px;
