--- a/messenger/src/app/modules/chat/chat.component.scss
+++ b/messenger/src/app/modules/chat/chat.component.scss
@@ -2,36 +2,21 @@
 
 :host {
   display: flex;
-  flex-direction: column;
   position: relative;
   height: calc(100% - 60px);
   width: 100%;
-  padding: 15px 100px;
   margin: 0 auto;
-  background-image: url("~src/assets/images/chat-bg.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  @media (max-width: $lg) {
-    padding: 15px 40px;
-  }
-}
-
-.chats-wrapper {
-  width: 100%;
-  height: 60%;
-  display: flex;
-  justify-content: space-between;
+  background-color: $main-content-bg;
 }
 
 .chats {
-  width: 48%;
+  width: 30%;
   height: 100%;
 }
 
-.users {
-  width: 100%;
-  height: 35%;
-  margin-top: 20px;
+.chat-room {
+  width: 70%;
+  height: 100%;
 }
 
 .chat-title {
@@ -52,16 +37,3 @@
   }
 }
 
-.add-new-chat-button {
-  position: absolute;
-  bottom: 10px;
-  right: 100px;
-  width: 55px;
-  height: 55px;
-  border-radius: 50%;
-  color: $white;
-  font-size: 34px;
-  @media (max-width: 992px) {
-    right: 40px;
-  }
-}
