--- a/messenger/src/app/modules/chat/components/chat-message/chat-message.component.scss
+++ b/messenger/src/app/modules/chat/components/chat-message/chat-message.component.scss
@@ -1,16 +1,20 @@
 @import 'src/styles/variables';
 
 .chat-message {
-  max-width: 430px;
   width: 93%;
-  margin: 0 auto;
+  margin: 0 auto 40px;
+  @media (max-width: $md) {
+    width: 87%;
+  }
   &.chat-left, &.chat-right {
     display: flex;
     flex: 1;
     flex-direction: row;
-    max-width: 430px;
-    width: 93%;
     margin: 0 auto 40px;
+    width: 93%;
+    @media (max-width: $md) {
+      width: 87%;
+    }
   }
 
   .avatar-img {
@@ -64,6 +68,7 @@
     line-height: 150%;
     position: relative;
     word-break: break-word;
+    color: $main-text-color;
 
     &:before {
       content: '';
