--- a/messenger/src/app/modules/chat/components/chat-room/chat-room.component.html
+++ b/messenger/src/app/modules/chat/components/chat-room/chat-room.component.html
@@ -1,8 +1,5 @@
 <div class="chat-box">
   <div class="chat-info">
-    <a [routerLink]="['/chats']" matTooltip="Go back">
-      <mat-icon class="go-back-icon">arrow_back</mat-icon>
-    </a>
     <h2 class="chat-title">{{selectedChat?.name}}</h2>
   </div>
   <ul class="messages-box" #scrollframe>
@@ -18,20 +15,23 @@
       <ng-template #helloBlock>
         <div class="welcome-wrapper">
           <h2 class="welcome-title">Welcome to chat: {{selectedChat?.name}}</h2>
-          <div class="welcome-img">
-            <img class="welcome-img" src="/assets/images/welcom.png" alt="Welcome to chat">
+          <div class="welcome-wrapper">
+            <img class="welcome-img" src="assets/images/welcom.png" alt="Welcome to chat">
           </div>
         </div>
       </ng-template>
     </ng-container>
     <ng-template #spinner>
-      <div class="chat-box">
-        <app-spinner></app-spinner>
+      <div class="welcome-wrapper">
+        <h2 class="welcome-title">Please select a chat</h2>
+        <div class="welcome-wrapper">
+          <img class="welcome-img" src="assets/images/welcom.png" alt="Welcome to chat">
+        </div>
       </div>
     </ng-template>
   </ul>
 
-  <div class="send-wrapper">
+  <div class="send-wrapper" *ngIf="isSelectedChat">
     <input
       class="input"
       type="text"
@@ -46,7 +46,7 @@
     ></emoji-mart>
     <button class="open-emoji-button" (click)="showEmojiPicker = !showEmojiPicker">😀</button>
     <button class="send-button" (click)="sendMessage()">
-      <img src="assets/images/Vector.png" alt="send">
+      <img src="../../../../../assets/images/Vector.png" alt="send">
     </button>
   </div>
 </div>
