--- a/messenger/src/app/modules/chat/components/chat-room/chat-room.component.scss
+++ b/messenger/src/app/modules/chat/components/chat-room/chat-room.component.scss
@@ -1,21 +1,16 @@
-@import 'src/styles/variables';
+@import '../../../../../styles/variables';
 
 :host {
   display: block;
-  height: calc(100% - 60px);
-  background-image: url("../../../../../assets/images/chat-bg.jpg");
+  height: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .chat-info {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 10px;
   border: 1px solid $border-color;
-  border-radius: 5px;
+  font-size: 20px;
  }
 
 .go-back-icon {
@@ -41,10 +36,14 @@
   width: 100%;
 }
 
+.welcome-img {
+  width: 100%;
+}
+
 .emoji-mart-block {
   position: absolute;
   bottom: 67px;
-  left: 0;
+  right: 0;
 }
 
 .send-wrapper {
@@ -52,19 +51,14 @@
 }
 
 .chat-box {
-  max-width: 430px;
-  width: 90%;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin: 0 auto;
-  padding: 10px;
-  background: #e8f5e9;
+  background: $chat-bg;
   border-radius: 5px;
-  -webkit-box-shadow: 0px 2px 10px 2px rgba(0, 105, 92, 0.56);
-  -moz-box-shadow: 0px 2px 10px 2px rgba(0, 105, 92, 0.56);
-  box-shadow: 0px 2px 10px 2px rgba(0, 105, 92, 0.56);
 }
 
 .messages-box {
@@ -76,11 +70,8 @@
 .input {
   padding: 15px 58px 15px 15px;
   width: 100%;
-  left: 0;
-  right: 0;
-  bottom: 0;
   background-color: $white;
-  border-top: 1px solid $white;
+  border: none;
   outline: none;
 }
 
