--- a/messenger/src/app/modules/chat/components/chats-list/chats-list.component.scss
+++ b/messenger/src/app/modules/chat/components/chats-list/chats-list.component.scss
@@ -3,9 +3,8 @@
 .chats-wrapper {
   width: 100%;
   overflow-y: auto;
-  height: calc(100% - 50px);
+  height: calc(100% - 36px);
   border-radius: 5px;
-  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .chats-wrapper::-webkit-scrollbar,
@@ -36,7 +35,6 @@
   min-height: 50px;
   border-bottom: 1px solid $border-color;
   cursor: pointer;
-  background-color: rgba(255, 255, 255, 0.7);
   &:hover {
     background-color: rgba(255, 255, 255, 0.5);
   }
@@ -46,4 +44,12 @@
       background-color: rgba(255, 255, 255, 0.7);
     }
   }
+}
+
+.add-new-chat-button {
+  width: 100%;
+  height: 36px;
+  border-radius: 0;
+  color: $white;
+  font-size: 34px;
 }
