--- a/messenger/src/app/modules/login/login.component.scss
+++ b/messenger/src/app/modules/login/login.component.scss
@@ -27,9 +27,9 @@
   padding: 15px;
   background-color: $white;
   border-radius: 5px;
-  -webkit-box-shadow: 0px 2px 10px 2px rgba(0, 105, 92, 0.56);
-  -moz-box-shadow: 0px 2px 10px 2px rgba(0, 105, 92, 0.56);
-  box-shadow: 0px 2px 10px 2px rgba(0, 105, 92, 0.56);
+  -webkit-box-shadow: 0px 2px 10px 2px $box-shadow;
+  -moz-box-shadow: 0px 2px 10px 2px $box-shadow;
+  box-shadow: 0px 2px 10px 2px $box-shadow;
 }
 
 .title {
