fixed main color

--- a/messenger/src/styles/variables.scss
+++ b/messenger/src/styles/variables.scss
@@ -1,6 +1,6 @@
 $body-bg:  #f4f5fb;
 $header-bg: #051367;
-$main-content-bg: #5D8BF4;
+$main-content-bg: #9AD0EC;
 $main-text-color: #051367;
 $text-color: #333C83;
 $button-bg: #333C83;
