--- a/messenger/src/app/modules/chat/chat.component.html
+++ b/messenger/src/app/modules/chat/chat.component.html
@@ -14,7 +14,7 @@
 </div>
 
 <ng-template #welcome>
-  <div class="chat-room">
+  <div class="welcome-chat-room">
     Please select a chat
   </div>
 </ng-template>
