--- a/messenger/src/styles/variables.scss
+++ b/messenger/src/styles/variables.scss
@@ -12,6 +12,7 @@ $chat-bg: #DFF6FF;
 $red: #d32f2f;
 $chat-user-name: #999999;
 $box-shadow: rgba(5, 19,103, 0.56);
+$list-item-hover: rgba(242, 74,114, .7);
 
 $lg: 992px;
 $sm: 415px;
