--- a/messenger/src/app/modules/chat/chat.component.scss
+++ b/messenger/src/app/modules/chat/chat.component.scss
@@ -6,7 +6,7 @@
   height: calc(100% - 60px);
   width: 100%;
   margin: 0 auto;
-  background-color: $main-content-bg;
+  background-color: $white;
 }
 
 .chats {
@@ -19,20 +19,15 @@
   height: 100%;
 }
 
-.chat-title {
+.welcome-chat-room {
   display: flex;
-  align-items: center;
   justify-content: center;
-  background-color: $header-bg;
-  height: 50px;
-  color: $white;
+  align-items: center;
+  background: $chat-bg;
+  width: 70%;
+  height: 100%;
   font-size: 30px;
-  border-radius: 5px;
-  text-align: center;
   @media(max-width: $md) {
-    font-size: 25px;
-  }
-  @media(max-width: $sm) {
     font-size: 20px;
   }
 }
