--- a/messenger/src/app/modules/chat/components/add-chat-modal/add-chat-modal.component.scss
+++ b/messenger/src/app/modules/chat/components/add-chat-modal/add-chat-modal.component.scss
@@ -46,3 +46,7 @@
   /*change color of underline when focused*/
   background-color: $border-color !important;
 }
+
+.mat-form-field {
+  width: 100%;
+}
