--- a/messenger/src/app/modules/chat/components/chat-list-item/chat-list-item.component.scss
+++ b/messenger/src/app/modules/chat/components/chat-list-item/chat-list-item.component.scss
@@ -5,13 +5,24 @@
   display: flex;
   align-items: center;
   position: relative;
-  padding: 0 5px;
+  padding: 0px 29px 0 10px;
   min-height: 50px;
   border-bottom: 1px solid  $chat-item-border;
   cursor: pointer;
-  transition: all 0.4s;
+  transition: all 0.6s;
+  -webkit-box-shadow: 3px 2px 5px 1px $box-shadow;
+  -moz-box-shadow: 3px 2px 5px 1px $box-shadow;
+  box-shadow: 3px 2px 5px 1px $box-shadow;
   &:hover {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: $list-item-hover;
+    border-bottom: 1px solid  $button-hover;
+    box-shadow: 3px 2px 5px 1px rgb(242 74 114 / 56%);
+    .chats-link {
+      color: $white;
+    }
+    .last-message {
+      color: $white;
+    }
   }
 }
 
@@ -39,8 +50,12 @@
   text-decoration: none;
   font-size: 20px;
   font-weight: 700;
-  color: $white;
+  color: $header-bg;
   width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  transition: all 0.6s;
   @media (max-width: $md) {
     font-size: 16px;
   }
@@ -48,4 +63,16 @@
     font-size: 14px;
     font-weight: 400;
   }
+}
+
+.last-message {
+  display: block;
+  color: $chat-user-name;
+  font-size: 14px;
+  font-weight: 400;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  transition: all 0.6s;
 }
