--- a/messenger/src/app/modules/layout/header/header.component.html
+++ b/messenger/src/app/modules/layout/header/header.component.html
@@ -1,7 +1,16 @@
 <header class="header-content">
   <div class="logo">Chatty</div>
-  <div>
-    <div>{{user?.displayName}}</div>
+  <div class="user-block">
+    <div class="user">
+      <avatar
+        [firstName]="user?.displayName.split(' ')[0]"
+        [lastName]="user?.displayName.split(' ')[1]"
+        [userId]="user?.uid"
+        [isCircle]="true"
+        [photo]="user?.userPhoto"
+      ></avatar>
+      <div>{{user?.displayName}}</div>
+    </div>
     <button *ngIf="user?.displayName" (click)="logOut()">Log out</button>
   </div>
 </header>
