--- a/messenger/src/app/modules/layout/header/header.component.scss
+++ b/messenger/src/app/modules/layout/header/header.component.scss
@@ -22,3 +22,12 @@
   color: $white;
 }
 
+.user-block {
+  display: flex;
+  flex-direction: column;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+}
