--- a/messenger/src/app/modules/layout/header/header.component.html
+++ b/messenger/src/app/modules/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header-content">
   <div class="logo">Chatty</div>
   <div class="user-block">
-    <div class="user">
+    <div class="user" *ngIf="user?.displayName">
       <avatar
         [firstName]="user?.displayName.split(' ')[0]"
         [lastName]="user?.displayName.split(' ')[1]"
