--- a/messenger/src/styles/variables.scss
+++ b/messenger/src/styles/variables.scss
@@ -14,6 +14,8 @@ $chat-user-name: #999999;
 $box-shadow: rgba(5, 19,103, 0.56);
 $list-item-hover: rgba(242, 74,114, .7);
 
+$xl: 1440px;
+$xlg: 1280px;
 $lg: 992px;
 $sm: 415px;
 $md: 768px;
