--- a/messenger/src/app/modules/chat/components/chat-list-item/chat-list-item.component.html
+++ b/messenger/src/app/modules/chat/components/chat-list-item/chat-list-item.component.html
@@ -7,7 +7,8 @@
     [lastName]="photoUserLastName"
     [userId]="chat.id"
     [isCircle]="true"
-    [photo]="pref + chat.image"
+    [photo]="chat.image"
+    [isBase64]="true"
   ></avatar>
   <button class="delete-button"
           *ngIf="userId === chat.authorId"
