--- a/messenger/src/app/shared/avatar/avatar/avatar.component.html
+++ b/messenger/src/app/shared/avatar/avatar/avatar.component.html
@@ -5,7 +5,7 @@
 >
     <img
         *ngIf="photo"
-        [src]="photo"
+        [src]="isBase64 ? pref + photo : photo"
         alt="Picture of {{ firstName }} {{ lastName }}"
         class="photo"
         (error)="onImageLoadError()"
