--- a/messenger/src/app/modules/chat/components/chat-room/chat-room.component.html
+++ b/messenger/src/app/modules/chat/components/chat-room/chat-room.component.html
@@ -1,6 +1,6 @@
 <div class="chat-box">
   <div class="chat-info">
-    <h2 class="chat-title">{{selectedChat?.name}}</h2>
+    <h2 class="chat-title">{{selectedChat?.name | formatChatName:selectedChat: true: user?.userId}}</h2>
   </div>
   <ul class="messages-box" #scrollframe (scroll)="scrolled($event)">
     <app-chat-message
