--- a/messenger/src/styles/variables.scss
+++ b/messenger/src/styles/variables.scss
@@ -17,5 +17,6 @@ $list-item-hover: rgba(242, 74,114, .7);
 $xl: 1440px;
 $xlg: 1280px;
 $lg: 992px;
-$sm: 415px;
 $md: 768px;
+$smd: 560px;
+$sm: 415px;
