--- a/messenger/src/app/modules/chat/components/chat-message/chat-message.component.scss
+++ b/messenger/src/app/modules/chat/components/chat-message/chat-message.component.scss
@@ -15,6 +15,11 @@
     @media (max-width: $md) {
       width: 87%;
     }
+    &:hover {
+      .delete-button {
+        display: block;
+      }
+    }
   }
 
   .avatar-img {
@@ -96,6 +101,19 @@
       font-size: 16px;
       color: #9ec94a;
     }
+  }
+}
+
+.delete-button {
+  position: absolute;
+  background: none;
+  display: none;
+}
+
+.delete-icon {
+  color: $main-text-color;
+  &:hover {
+    color: $red;
   }
 }
 
