--- a/messenger/src/app/modules/chat/components/chats-list/chats-list.component.scss
+++ b/messenger/src/app/modules/chat/components/chats-list/chats-list.component.scss
@@ -4,6 +4,9 @@
   display: block;
   height: 100%;
   border-right: 1px solid $chat-item-border;
+  @media (max-width: $smd) {
+    border-right: none;
+  }
 }
 
 .chats-wrapper {
