--- a/messenger/src/app/modules/chat/components/chat-room/chat-room.component.html
+++ b/messenger/src/app/modules/chat/components/chat-room/chat-room.component.html
@@ -13,7 +13,7 @@
     ></app-chat-message>
   </ul>
 
-  <div class="send-wrapper" *ngIf="isSelectedChat">
+  <div class="send-wrapper">
     <input
       class="input"
       type="text"
