--- a/messenger/src/app/modules/chat/chat.component.scss
+++ b/messenger/src/app/modules/chat/chat.component.scss
@@ -10,10 +10,10 @@
 }
 
 .chats {
-  width: 30%;
+  width: 35%;
   height: 100%;
   @media (max-width: $md) {
-    width: 40%;
+    width: 45%;
   }
   @media (max-width: $smd) {
     position: absolute;
@@ -30,10 +30,10 @@
 }
 
 .chat-room {
-  width: 70%;
+  width: 65%;
   height: 100%;
   @media (max-width: $md) {
-    width: 60%;
+    width: 55%;
   }
   @media (max-width: $smd) {
     width: 100%;
@@ -45,12 +45,13 @@
   justify-content: center;
   align-items: center;
   background: $chat-bg;
-  width: 70%;
+  width: 65%;
   height: 100%;
   font-size: 30px;
   text-shadow: 1px 1px $main-text-color;
   @media(max-width: $md) {
     font-size: 20px;
+    width: 55%;
   }
   @media (max-width: $smd) {
     width: 100%;
@@ -64,6 +65,8 @@
   z-index: 3;
   display: none;
   @media (max-width: $smd) {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
