--- a/messenger/src/app/modules/chat/components/chats-list/chats-list.component.scss
+++ b/messenger/src/app/modules/chat/components/chats-list/chats-list.component.scss
@@ -3,16 +3,57 @@
 :host {
   display: block;
   height: 100%;
-  border-right: 1px solid $chat-item-border;
   @media (max-width: $smd) {
     border-right: none;
   }
 }
 
-.chats-wrapper {
-  width: 100%;
-  overflow-y: auto;
+.chats-block {
+  display: flex;
   height: calc(100% - 36px);
+  width: 100%;
+}
+
+.chat-tabs {
+  width: 22%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 14px;
+}
+
+.chat-tab {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  min-height: 55px;
+  padding: 5px 0;
+  border-bottom: 1px solid  transparent;
+  cursor: pointer;
+  transition: all 0.4s;
+  &:hover {
+    background-color: $list-item-hover;
+    border-bottom: 1px solid  $button-hover;
+    box-shadow: 0 2px 5px 1px rgb(242 74 114 / 56%);
+    & > * {
+      transition: all 0.4s;
+      color: $white;
+    }
+  }
+  &.selected {
+    background: $list-item-selected;
+    &:hover {
+      background-color: $list-item-hover;
+    }
+  }
+}
+
+.chats-wrapper {
+  width: 78%;
+  overflow-y: auto;
+  border-right: 1px solid $chat-item-border;
+  border-left: 1px solid $chat-item-border;
 }
 
 .chats-wrapper::-webkit-scrollbar,
